--- a/playbook_deploy_app.yml
+++ b/playbook_deploy_app.yml
@@ -6,4 +6,4 @@
   gather_facts: no
   tasks:
     - name: Deploy deployment and service in k8s cluster
-      shell: kubectl create -f deployment_service.yml
+      shell: "kubectl create -f deployment_service.yml"
